--- a/discipline-wise-student-list.html
+++ b/discipline-wise-student-list.html
@@ -45,7 +45,7 @@
   <body>
     <nav class="desktop-menu">
       <div>
-        <div class="container-fluid py-3 px-5 bg-g">
+        <div class="container-fluid pt-2 pb-3 px-5 bg-g">
           <div class="row justify-content-between align-items-center">
             <div class="row justify-content-around align-items-center">
               <div class="col text-left my-auto">
@@ -66,52 +66,65 @@
                 /></a>
               </div>
             </div>
-            <div class="col-9">
-              <div class="col">
+            <div class="col-9 p-0">
+              <div class="col p-0">
                 <div class="row design-faculty-bar align_center">
                   <div class="col text-center">
-                    <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-cmd"
+                    <a href="./discipline-wise-student-list.html" class="">
+                      <span class="d-inline-block df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
+                    <div class="hr-cmd-inactive"></div>
                   </div>
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-idd"
+                      ><span class="d-inline-block df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
+                    <div class="hr-idd-inactive"></div>
                   </div>
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-ind"
+                      ><span class="d-inline-block df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
                     >
+                    <div class="hr-ind-inactive"></div>
                   </div>
 
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html"
-                      ><span class="d-inline-block df-name hr-itd"
+                      ><span class="d-inline-block df-name"
                         >IT INTEGRATED</span
                       ></a
                     >
+                    <div
+                      class="hr-itd-active"
+                      style="
+                        position: absolute;
+                        bottom: -1.2rem;
+                        border-width: 15px !important;
+                      "
+                    ></div>
                   </div>
-                  <div class="col text-center">
+                  <div class="col justify-content-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-txd"
+                      ><span class="d-inline-block df-name"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
                       ></a
                     >
+                    <div class="hr-txd-inactive"></div>
                   </div>
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-sort"
+                      ><span class="d-inline-block df-name"
                         >SORT BY GUIDE</span
                       ></a
                     >
+                    <div class="hr-sort-inactive"></div>
                   </div>
                 </div>
               </div>
@@ -124,25 +137,25 @@
           </div>
         </div>
       </div>
-      <div class="container bg-itd p-3 border_r_bottom">
+      <div class="container-fluid bg-itd p-2">
         <div class="container discipline-bar">
           <div class="row justify-content-md-center">
-            <div class="col text-center current rounded-pill">
+            <div class="col text-center current rounded">
               <a href="./discipline-wise-student-list.html"
                 >Digital Game Design</a
               >
             </div>
-            <div class="col text-center current rounded-pill">
+            <div class="col text-center current rounded">
               <a href="./discipline-wise-student-list.html?q=id"
                 >Information Design</a
               >
             </div>
-            <div class="col text-center current active-itd rounded-pill">
+            <div class="col text-center current active-itd rounded">
               <a href="./discipline-wise-student-list.html?q=intd"
                 >Interaction Design</a
               >
             </div>
-            <div class="col text-center current rounded-pill">
+            <div class="col text-center current rounded">
               <a href="./discipline-wise-student-list.html?q=nmd"
                 >New Media Design</a
               >
@@ -231,7 +244,7 @@
     </div>
     <div
       class="container-fluid mt-4 project-list"
-      style="padding-top: 20vh; padding-left: 5vw; padding-right: 5vw"
+      style="padding-top: 15vh; padding-left: 10vw; padding-right: 10vw"
     >
       <div class="row my-4 mb-5">
         <div class="col text-center">
@@ -251,9 +264,7 @@
               </div>
               <div class="card-body">
                 <div class="card-top-text">
-                  Enterprise UX for Big Data Analytics and Consumption
-                  Enterprise UX for Big Data Analytics and Consumption
-                  Enterprise UX for Big Data Analytics and Consumption
+                  The Missing We - A point and click Escape Room game
                 </div>
                 <div class="card-bottom-text">Bharat Bhusan Apat</div>
               </div>
@@ -443,7 +454,7 @@
         if (prevScrollPos > currentScrollPos) {
           navbar.style.transform = "translateY(0%)";
         } else {
-          navbar.style.transform = "translateY(-67%)";
+          navbar.style.transform = "translateY(-65%)";
         }
 
         prevScrollPos = currentScrollPos;
