--- a/guide-list.html
+++ b/guide-list.html
@@ -45,7 +45,7 @@
   <body>
     <nav class="desktop-menu">
       <div>
-        <div class="container-fluid py-3 px-5 bg-g">
+        <div class="container-fluid pt-2 pb-3 px-5 bg-g">
           <div class="row justify-content-between align-items-center">
             <div class="row justify-content-around align-items-center">
               <div class="col text-left my-auto">
@@ -66,52 +66,65 @@
                 /></a>
               </div>
             </div>
-            <div class="col-9">
-              <div class="col">
+            <div class="col-9 p-0">
+              <div class="col p-0">
                 <div class="row design-faculty-bar align_center">
                   <div class="col text-center">
-                    <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-cmd"
+                    <a href="./discipline-wise-student-list.html" class="">
+                      <span class="d-inline-block df-name"
                         >COMMUNICATION DESIGN</span
                       ></a
                     >
+                    <div class="hr-cmd-inactive"></div>
                   </div>
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-idd"
+                      ><span class="d-inline-block df-name"
                         >INDUSTRIAL DESIGN</span
                       ></a
                     >
+                    <div class="hr-idd-inactive"></div>
                   </div>
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-ind"
+                      ><span class="d-inline-block df-name"
                         >INTERDISCIPLINARY DESIGN</span
                       ></a
                     >
+                    <div class="hr-ind-inactive"></div>
                   </div>
 
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html"
-                      ><span class="d-inline-block df-name hr-itd"
+                      ><span class="d-inline-block df-name"
                         >IT INTEGRATED</span
                       ></a
                     >
+                    <div
+                      class="hr-itd-active"
+                      style="
+                        position: absolute;
+                        bottom: -1.2rem;
+                        border-width: 15px !important;
+                      "
+                    ></div>
                   </div>
-                  <div class="col text-center">
+                  <div class="col justify-content-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-txd"
+                      ><span class="d-inline-block df-name"
                         >TEXTILE, APPAREL, LIFESTYLE &amp; ACCESSORY
                         DESIGN</span
                       ></a
                     >
+                    <div class="hr-txd-inactive"></div>
                   </div>
                   <div class="col text-center">
                     <a href="./discipline-wise-student-list.html" class=""
-                      ><span class="d-inline-block df-name hr-sort"
+                      ><span class="d-inline-block df-name"
                         >SORT BY GUIDE</span
                       ></a
                     >
+                    <div class="hr-sort-inactive"></div>
                   </div>
                 </div>
               </div>
