--- a/discipline-wise-student-list.html
+++ b/discipline-wise-student-list.html
@@ -43,9 +43,13 @@
   </head>
 
   <body>
+    <div class="preloader-gif">
+      <img src="./load.gif" />
+    </div>
+
     <nav class="desktop-menu">
       <div>
-        <div class="container-fluid pt-2 pb-3 px-5 bg-g">
+        <div class="container-fluid pt-2 pb-3 px-5 bg-b-g">
           <div class="row justify-content-between align-items-center">
             <div class="row justify-content-around align-items-center">
               <div class="col text-left my-auto">
@@ -119,7 +123,7 @@
                     <div class="hr-txd-inactive"></div>
                   </div>
                   <div class="col text-center">
-                    <a href="./discipline-wise-student-list.html" class=""
+                    <a href="./guide-list.html" class=""
                       ><span class="d-inline-block df-name"
                         >SORT BY GUIDE</span
                       ></a
@@ -128,11 +132,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-
-            <div class="toggle-btn">
-              <span class="one"></span>
-              <span class="two"></span>
             </div>
           </div>
         </div>
@@ -254,7 +253,7 @@
 
       <div class="row mb-5 mx-5">
         <div class="col">
-          <a href="project.php?q=2048">
+          <a href="./project-detail.html">
             <div class="card position-relative">
               <div class="square-img-container">
                 <img
@@ -272,7 +271,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="project.php?q=2048">
+          <a href="./project-detail.html">
             <div class="card position-relative">
               <div class="square-img-container">
                 <img
@@ -290,64 +289,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="project.php?q=2048">
-            <div class="card position-relative">
-              <div class="square-img-container">
-                <img
-                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
-                  alt=""
-                />
-              </div>
-              <div class="card-body">
-                <div class="card-top-text">
-                  Enterprise UX for Big Data Analytics and Consumption
-                </div>
-                <div class="card-bottom-text">Bharat Bhusan Apat</div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-
-      <div class="row mb-5 mx-5">
-        <div class="col">
-          <a href="project.php?q=2048">
-            <div class="card position-relative">
-              <div class="square-img-container">
-                <img
-                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
-                  alt=""
-                />
-              </div>
-              <div class="card-body">
-                <div class="card-top-text">
-                  Enterprise UX for Big Data Analytics and Consumption
-                </div>
-                <div class="card-bottom-text">Bharat Bhusan Apat</div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col">
-          <a href="project.php?q=2048">
-            <div class="card position-relative">
-              <div class="square-img-container">
-                <img
-                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
-                  alt=""
-                />
-              </div>
-              <div class="card-body">
-                <div class="card-top-text">
-                  Enterprise UX for Big Data Analytics and Consumption
-                </div>
-                <div class="card-bottom-text">Bharat Bhusan Apat</div>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col">
-          <a href="project.php?q=2048">
+          <a href="./project-detail.html">
             <div class="card position-relative">
               <div class="square-img-container">
                 <img
@@ -368,7 +310,7 @@
 
       <div class="row mb-5 mx-5">
         <div class="col">
-          <a href="project.php?q=2048">
+          <a href="./project-detail.html">
             <div class="card position-relative">
               <div class="square-img-container">
                 <img
@@ -386,7 +328,7 @@
           </a>
         </div>
         <div class="col">
-          <a href="project.php?q=2048">
+          <a href="./project-detail.html">
             <div class="card position-relative">
               <div class="square-img-container">
                 <img
@@ -404,7 +346,64 @@
           </a>
         </div>
         <div class="col">
-          <a href="project.php?q=2048">
+          <a href="./project-detail.html">
+            <div class="card position-relative">
+              <div class="square-img-container">
+                <img
+                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <div class="card-top-text">
+                  Enterprise UX for Big Data Analytics and Consumption
+                </div>
+                <div class="card-bottom-text">Bharat Bhusan Apat</div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="row mb-5 mx-5">
+        <div class="col">
+          <a href="./project-detail.html">
+            <div class="card position-relative">
+              <div class="square-img-container">
+                <img
+                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <div class="card-top-text">
+                  Enterprise UX for Big Data Analytics and Consumption
+                </div>
+                <div class="card-bottom-text">Bharat Bhusan Apat</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a href="./project-detail.html">
+            <div class="card position-relative">
+              <div class="square-img-container">
+                <img
+                  src="https://youngdesigners.nid.edu/images/discipline/INTD/S1725103-Bharat-Apat.jpg"
+                  alt=""
+                />
+              </div>
+              <div class="card-body">
+                <div class="card-top-text">
+                  Enterprise UX for Big Data Analytics and Consumption
+                </div>
+                <div class="card-bottom-text">Bharat Bhusan Apat</div>
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col">
+          <a href="./project-detail.html">
             <div class="card position-relative">
               <div class="square-img-container">
                 <img
@@ -535,6 +534,15 @@
       });
     </script>
 
+    <script>
+      function preloadAnimation() {
+        setTimeout(showPage, 1200);
+      }
+      function showPage() {
+        document.querySelectorAll(".preloader-gif")[0].style.display = "none";
+      }
+      window.onload = preloadAnimation();
+    </script>
     <script type="text/javascript">
       $(document).ready(function () {});
     </script>
