--- a/guide-wise-student-list.html
+++ b/guide-wise-student-list.html
@@ -43,9 +43,13 @@
   </head>
 
   <body>
+    <div class="preloader-gif">
+      <img src="./load.gif" />
+    </div>
+
     <nav class="desktop-menu">
       <div>
-        <div class="container-fluid pt-2 pb-3 px-5 bg-g">
+        <div class="container-fluid pt-2 pb-3 px-5 bg-b-g">
           <div class="row justify-content-between align-items-center">
             <div class="row justify-content-around align-items-center">
               <div class="col text-left my-auto">
@@ -100,14 +104,7 @@
                         >IT INTEGRATED</span
                       ></a
                     >
-                    <div
-                      class="hr-itd-active"
-                      style="
-                        position: absolute;
-                        bottom: -1.2rem;
-                        border-width: 15px !important;
-                      "
-                    ></div>
+                    <div class="hr-itd-inactive"></div>
                   </div>
                   <div class="col justify-content-center">
                     <a href="./discipline-wise-student-list.html" class=""
@@ -119,7 +116,7 @@
                     <div class="hr-txd-inactive"></div>
                   </div>
                   <div class="col text-center">
-                    <a href="./discipline-wise-student-list.html" class=""
+                    <a href="./guide-list.html" class=""
                       ><span class="d-inline-block df-name"
                         >SORT BY GUIDE</span
                       ></a
@@ -129,18 +126,13 @@
                 </div>
               </div>
             </div>
-
-            <div class="toggle-btn">
-              <span class="one"></span>
-              <span class="two"></span>
-            </div>
           </div>
         </div>
       </div>
-      <div class="row d-flex justify-content-around mx-2">
-        <div class="col-2 p-3 discipline-bar border_r_bottom_s">
-          <div class="row justify-content-center">
-            <div class="col text-center bg-itd rounded-pill">
+      <div class="container-fluid bg-itd p-2">
+        <div class="container discipline-bar">
+          <div class="row-3">
+            <div class="col w-25 justify-content-center text-center active-itd">
               <a href="./discipline-wise-student-list.html?q=intd"
                 ><b>Guide:</b></a
               >
@@ -240,7 +232,7 @@
         <div class="col position-fixed" style="left: 5vw">
           <div class="col bg-itd rounded-pill">
             <a href="http://">
-              <div class="card position-absolute">
+              <div class="card position-absolute w-25">
                 <div class="square-img-container">
                   <img
                     src="https://youngdesigners.nid.edu/images/faculty/chakradhar.jpg"
@@ -573,6 +565,15 @@
       });
     </script>
 
+    <script>
+      function preloadAnimation() {
+        setTimeout(showPage, 1200);
+      }
+      function showPage() {
+        document.querySelectorAll(".preloader-gif")[0].style.display = "none";
+      }
+      window.onload = preloadAnimation();
+    </script>
     <script type="text/javascript">
       $(document).ready(function () {});
     </script>
