--- a/sample_page_for_mobile_mobile_tablet_menu.html
+++ b/sample_page_for_mobile_mobile_tablet_menu.html
@@ -224,7 +224,7 @@
 
     <nav class="desktop-menu">
       <div>
-        <div class="container-fluid pt-2 pb-3 px-5 bg-b-g">
+        <div class="container-fluid pt-2 pb-3 px-5 bg-g">
           <div class="row justify-content-between align-items-center">
             <div class="row justify-content-around align-items-center">
               <div class="col text-left my-auto">
@@ -300,6 +300,11 @@
                   </div>
                 </div>
               </div>
+            </div>
+
+            <div class="toggle-btn">
+              <span class="one"></span>
+              <span class="two"></span>
             </div>
           </div>
         </div>
